--- a/java Secont/index.html
+++ b/java Secont/index.html
@@ -9,6 +9,7 @@
 <div style="text-align: center;font-size: 5rem;color: white;">
     <p>Punjab</p>
     <p>Haryana</p>
+    <p>Delhi</p>
 </div>
     
 </body>
